<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Sitemap">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_account_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/accountinformation"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_myaccount_sitemap"
        app:layout_constraintTop_toBottomOf="@+id/tv_myaccount_sitemap" />

    <TextView
        android:id="@+id/tv_special_sitemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/special"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_curtain"
        app:layout_constraintTop_toBottomOf="@+id/tv_curtain" />

    <TextView
        android:id="@+id/textView188"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sitemap"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bedsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bedsheet"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/textView188"
        app:layout_constraintTop_toBottomOf="@+id/textView188" />

    <TextView
        android:id="@+id/tv_hotal_lenine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_lenin"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_bedsheet"
        app:layout_constraintTop_toBottomOf="@+id/tv_bedsheet" />

    <TextView
        android:id="@+id/tv_new_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_arrival"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_hotal_lenine"
        app:layout_constraintTop_toBottomOf="@+id/tv_hotal_lenine" />

    <TextView
        android:id="@+id/tv_comforter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comfort"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_new_arrival"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_arrival" />

    <TextView
        android:id="@+id/tv_cushion_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cushion"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_comforter"
        app:layout_constraintTop_toBottomOf="@+id/tv_comforter" />

    <TextView
        android:id="@+id/tv_towels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/towels"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_cushion_cover"
        app:layout_constraintTop_toBottomOf="@+id/tv_cushion_cover" />

    <TextView
        android:id="@+id/tv_skin_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skin"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_towels"
        app:layout_constraintTop_toBottomOf="@+id/tv_towels" />

    <TextView
        android:id="@+id/tv_luxury_skin_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/luxary"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_skin_care"
        app:layout_constraintTop_toBottomOf="@+id/tv_skin_care" />

    <TextView
        android:id="@+id/tv_decoration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decorater"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_skin_care"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury_skin_care" />

    <TextView
        android:id="@+id/tv_mosquitos_nets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mosquiteo"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_decoration"
        app:layout_constraintTop_toBottomOf="@+id/tv_decoration" />

    <TextView
        android:id="@+id/tv_curtain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curtain"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_mosquitos_nets"
        app:layout_constraintTop_toBottomOf="@+id/tv_mosquitos_nets" />

    <TextView
        android:id="@+id/tv_myaccount_sitemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myaccount"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_special_sitemap"
        app:layout_constraintTop_toBottomOf="@+id/tv_special_sitemap" />

    <TextView
        android:id="@+id/tv_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_account_information"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_information" />

    <TextView
        android:id="@+id/tv_address_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressbook"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_password_change"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_change" />

    <TextView
        android:id="@+id/tv_order_history_sitemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderhistery"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_address_book"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_book" />

    <TextView
        android:id="@+id/tv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_order_history_sitemap"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_history_sitemap" />

    <TextView
        android:id="@+id/tv_view_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewcart"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_myaccount_sitemap"
        app:layout_constraintTop_toBottomOf="@+id/tv_download" />

    <TextView
        android:id="@+id/tv_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_view_cart"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_cart" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_checkout"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout" />

    <TextView
        android:id="@+id/textView185"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textColor="@color/pink"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_search"
        app:layout_constraintTop_toBottomOf="@+id/tv_search" />

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/aboutus"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/textView185"
        app:layout_constraintTop_toBottomOf="@+id/textView185" />

    <TextView
        android:id="@+id/tv_cancellation_policy_sitemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancalletion"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_about_us"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_us" />

    <TextView
        android:id="@+id/tv_refund_policy_site_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refund"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_cancellation_policy_sitemap"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancellation_policy_sitemap" />

           <TextView
               android:id="@+id/tv_term_and_condition"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tc"
               android:textColor="@color/teal_200"
               android:textSize="@dimen/_14sdp"
               app:layout_constraintStart_toStartOf="@+id/tv_refund_policy_site_map"
               app:layout_constraintTop_toBottomOf="@+id/tv_refund_policy_site_map" />

        <TextView
            android:id="@+id/tv_contact_site_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/contact"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_term_and_condition"
            app:layout_constraintTop_toBottomOf="@+id/tv_term_and_condition" />
       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>